# plaid

./: .gitignore  README.md  cabal-ghcjs.project  cabal.project  default.nix  plaid.cabal  plaid.nix
plaid-client/: ChangeLog.md  default.nix  plaid-client.cabal  shell.nix
plaid-client/src/Web/: Plaid.hs
plaid-client/src/Web/Plaid/: Client.hs
plaid-core/: ChangeLog.md  default.nix  plaid-core.cabal
plaid-core/src/Web/: Plaid.hs
plaid-core/src/Web/Plaid/: Internal.hs  Sample.hs  Types.hs
plaid-core/src/Web/Plaid/Types/: Api.hs  Core.hs  Http.hs  Link.hs
reflex-dom-plaid/: README.md  reflex-dom-plaid.cabal
reflex-dom-plaid-demo/: Main.hs  reflex-dom-plaid-demo.cabal
reflex-dom-plaid/Reflex/Dom/Plaid/: Link.hs
src/Web/: Plaid.hs
src/Web/Plaid/: Internal.hs  Sample.hs  Types.hs
