name:           reflex-dom-plaid-demo
version:        0.0.1
synopsis:       Demo Plaid Link integration for Reflex-DOM
category:       Web
copyright:      2018 Obsidian Systems LLC
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

executable demo
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -O2
  build-depends:
      base
    , plaid-core
    , reflex-dom
    , reflex-dom-plaid
  default-language: Haskell2010

