name:           reflex-dom-plaid
version:        0.0.1
synopsis:       Plaid Link integration for Reflex-DOM
category:       Web
maintainer:     maintainer@obsidian.systems
copyright:      2018 Obsidian Systems LLC
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
    Reflex.Dom.Plaid.Link
  hs-source-dirs: .
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -O2
  build-depends:
      base >= 4.7 && < 4.11
    , ghcjs-dom >= 0.9.1.0 && < 0.10
    , jsaddle >= 0.9.0.0 && < 0.10
    , lens >= 4.7 && < 5
    , mtl >= 2.1 && < 2.3
    , reflex-dom-core == 0.4.*
    , text == 1.2.*
  default-language: Haskell2010
